create new dto class and save response from ai to database