@@ -1,7 +1,14 @@
 package com.digitaltwin.backend.service;
 
-import com.digitaltwin.backend.model.AIRequest;
-import com.digitaltwin.backend.model.AIResponse;
+import com.digitaltwin.backend.dto.AIRequest;
+import com.digitaltwin.backend.dto.AIResponse;
+import com.digitaltwin.backend.model.TwinChat;
+import com.digitaltwin.backend.model.TwinProfile;
+import com.digitaltwin.backend.repository.TwinChatRepository;
+import com.digitaltwin.backend.repository.TwinProfileRepository;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatusCode;
 import org.springframework.stereotype.Service;
@@ -9,11 +16,19 @@ import org.springframework.web.reactive.function.client.WebClient;
 import org.springframework.web.reactive.function.client.WebClientResponseException;
 import reactor.core.publisher.Mono;
 
-import static com.digitaltwin.backend.util.PromptTemplate.*;
+import static com.digitaltwin.backend.util.ConstantsTemplate.*;
 import java.util.List;
 
 @Service
 public class AIService {
+
+    @Autowired
+    private TwinProfileRepository twinProfileRepository;
+
+    @Autowired
+    private TwinChatRepository twinChatRepository;
+
+    private static final Logger logger = LoggerFactory.getLogger(AIService.class);
 
     public final WebClient webClient;
 
@@ -29,8 +44,9 @@ public class AIService {
 
         String prompt = String.join(" ", userAnswers);
 
+        // Create the AIRequest object with the system context and user prompt
         AIRequest request = new AIRequest(
-            "llama3-70b-8192",
+            AI_MODEL,
                 List.of(
                         new AIRequest.Message(ROLE_SYSTEM, PROFILE_GENERATION_CONTEXT),
                         new AIRequest.Message(ROLE_USER, PROFILE_PROMPT_PREFIX + prompt + PROFILE_PROMPT_SUFFIX)
@@ -39,28 +55,51 @@ public class AIService {
         );
 
         try {
+            // Make the API call to Grok AI to generate the profile summary
             AIResponse response = webClient.post()
                     .uri("/openai/v1/chat/completions")
                     .bodyValue(request)
                     .retrieve()
                     .onStatus(HttpStatusCode::isError, clientResponse ->
                             clientResponse.bodyToMono(String.class)
-                                    .flatMap(errorBody -> Mono.error(new RuntimeException("OpenAI Error: " + errorBody)))
+                                    .flatMap(errorBody -> Mono.error(new RuntimeException("GrokAI Error: " + errorBody)))
                     )
                     .bodyToMono(AIResponse.class)
                     .block();
 
-            return response.getChoices().get(0).getMessage().getContent();
+            if(response!=null && response.getChoices() != null && !response.getChoices().isEmpty()) {
+                // Extract the generated profile summary from the response
+                String profileSummary = response.getChoices().getFirst().getMessage().getContent();
+                logger.info("Generated profile summary: {}", profileSummary);
+
+                // Create a new TwinProfile object with the generated summary
+                TwinProfile profile = TwinProfile.builder()
+                        .userId("dummy-user") // Replace with actual user ID
+                        .profileSummary(profileSummary)
+                        .createdAt(java.time.LocalDateTime.now())
+                        .build();
+
+                // Save the generated profile to the database
+                twinProfileRepository.save(profile);
+
+                return profileSummary;
+            } else{
+                logger.error("Empty or null response from grok AI while generating profile");
+                throw new RuntimeException("Failed to generate twin profile");
+            }
+
         } catch (WebClientResponseException.TooManyRequests e) {
-            throw new RuntimeException("Rate limit exceeded. Try again later.");
+            throw new RuntimeException("Rate limit exceeded. Try again later." + e.getMessage());
         } catch (Exception e) {
             throw new RuntimeException("Error during OpenAI call: " + e.getMessage());
         }
     }
 
     public String respondAsTwin(String twinIdentity, String userQuestion) {
+
+        // Create the AIRequest object with the system context and user question
         AIRequest request = new AIRequest(
-                "llama3-70b-8192",
+                AI_MODEL,
                 List.of(
                         new AIRequest.Message(ROLE_SYSTEM, SYSTEM_TWIN_CONTEXT),
                         new AIRequest.Message(ROLE_USER, TWIN_USER_IDENTITY_PREFIX + twinIdentity),
@@ -70,18 +109,39 @@ public class AIService {
         );
 
         try {
+            // Make the API call to Grok AI to get the response for user question
             AIResponse response = webClient.post()
                     .uri("/openai/v1/chat/completions")
                     .bodyValue(request)
                     .retrieve()
                     .onStatus(HttpStatusCode::isError, clientResponse ->
                             clientResponse.bodyToMono(String.class)
-                                    .flatMap(errorBody -> Mono.error(new RuntimeException("OpenAI Error: " + errorBody)))
+                                    .flatMap(errorBody -> Mono.error(new RuntimeException("GrokAI Error: " + errorBody)))
                     )
                     .bodyToMono(AIResponse.class)
                     .block();
 
-            return response.getChoices().get(0).getMessage().getContent();
+            if(response!=null && response.getChoices() != null && !response.getChoices().isEmpty()) {
+                // Extract the generated answer from the response
+                String answer = response.getChoices().getFirst().getMessage().getContent();
+                logger.info("Generated answer from user question: {}", answer);
+
+                TwinChat chat = TwinChat.builder()
+                        .userId(twinIdentity) // temporary until JWT is added
+                        .question(userQuestion)
+                        .aiResponse(answer)
+                        .timestamp(java.time.LocalDateTime.now())
+                        .build();
+
+                // Save the chat interaction to the database
+                twinChatRepository.save(chat);
+
+                return answer;
+            } else{
+                logger.error("Empty or null response from grok AI while generating answer");
+                throw new RuntimeException("Failed to generate answer for user question");
+            }
+
         } catch (WebClientResponseException.TooManyRequests e) {
             throw new RuntimeException("Rate limit exceeded. Try again later.");
         } catch (Exception e) {
